Actions
Bug #12726
closedsbbc: smatch and NULL pointer errors
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors on SPARC:
../../sun4u/io/sbbc.c: In function 'sbbc_attach': ../../sun4u/io/sbbc.c:428: error: passing argument 6 of 'ddi_create_minor_node' makes integer from pointer without a cast ../../common/sys/sunddi.h:1571: note: expected 'int' but argument is of type 'void *' ../../sun4u/io/sbbc.c: In function 'sbbc_ioctl': ../../sun4u/io/sbbc.c:1147: error: comparison between pointer and integer ../../sun4u/io/sbbc.c:1187: error: comparison between pointer and integer /code/illumos-gate/usr/src/tools/proto/root_sparc-nd/opt/onbld/bin/sparc/smatch: ../../sun4u/io/sbbc.c:708 sbbc_add_intr_impl() error: buffer overflow 'sbbcsoftp->child_intr' 3 <= 3 (assuming for loop doesn't break)
Updated by Electric Monk about 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 836be2fe28b6fc20176de322440ef4bb1a5f37dd
commit 836be2fe28b6fc20176de322440ef4bb1a5f37dd Author: Toomas Soome <tsoome@me.com> Date: 2020-05-15T11:06:37.000Z 12726 sbbc: smatch and NULL pointer errors Reviewed by: C Fraire <cfraire@me.com> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Joshua M. Clulow <josh@sysmgr.org>
Actions